--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,48 @@ body {
     gap: 1rem;
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+    margin-right: 10px;
+}
+
+.swtich input {display: none;}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 24px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.slider::before{
+    content: "";
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked+ .slider{
+    background-color: #2196f3;
+}
+
+input:checked+ .slider::before{
+    transform: translateX(26px);
+}
+
 /* Modern Form Elements */
 .input-group {
     display: flex;
